--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,4 +1,5 @@
-html, body { height: 100%; margin: 0; padding: 0;}
+html, body { height: 100%; margin: 0; padding: 0;
+background-color: #343a40; }
 
 #map { height: 1000px;
        width: 100%;
@@ -6,7 +7,7 @@ html, body { height: 100%; margin: 0; padding: 0;}
 
 a { color: white; }
 
-.sidebar-height { height: 1000px; }
+.sidebar-height { height: 100%; }
 
 .mapTitle h2{
     font-size: 12px;
